<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">
    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hatirlatma_title_label"/>
    <EditText
        android:id="@+id/hatirlatma_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hatirlatma_title_hint"/>
    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hatirlatma_details_label"/>
    <EditText
        android:id="@+id/hatirlatma_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hatirlatma_details_hint"/>
    <CheckBox
        android:id="@+id/hatirlatma_tamamlandi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tamamlandi_label"/>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sil" />
</LinearLayout>