<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/hatirlatma_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/hatirlatma_id"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/hatirlatma_baslik"
        app:layout_constraintEnd_toEndOf="@+id/hatirlatma_baslik"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/hatirlatma_baslik"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/hatirlatma_title_label"
        app:layout_constraintBottom_toTopOf="@+id/hatirlatma_detay"
        app:layout_constraintEnd_toStartOf="@+id/tamamlanma"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/hatirlatma_detay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/hatirlatma_details_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tamamlanma"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hatirlatma_baslik" />

    <ImageView
        android:id="@+id/tamamlanma"
        android:layout_width="45dp"
        android:layout_height="33dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/checkbox_on_background" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="12dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@+id/hatirlatma_detay" />


</androidx.constraintlayout.widget.ConstraintLayout>